--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
           </div>
         <div class="card text-center">
-           <a href="https://www.youtube.com/shorts/EKU4d1IFJT8"> <h1 class="tittle"> Ini Videonya </h1> </a> 
+           <a href="https://www.youtube.com/shorts/vexEYimQbFg"> <h1 class="tittle"> Ini Videonya </h1> </a> 
             <i class="fa-duotone fa-solid fa-film icons"></i>
             <p class="description"> Di klik ya</p>
            
